# imskpe

./: .gitattributes  .gitignore  README.md
dockerfiles/ubuntu/: Dockerfile
imskpe/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  imskpe-icon.xcf  imskpe.glade  imskpe.gladep  mkwin32.sh
imskpe/debian/: changelog  control  copyright  rules
imskpe/po/: Makefile.in  POTFILES.in  README  de.po  fr.po  imskpe.pot  pt_BR.po  update.pl
imskpe/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  cfg.c  cfg.h  convert.c  convert.h  curves.c  curves.h  graphics.c  graphics.h  interface.c  interface.h  loadconf.h  loadconf.l  loadfile.c  loadfile.h  loadpar.h  loadpar.l  main.c  savefile.c  savefile.h
imskpe/src/klatt80/: INSTALL  Makefile  Makefile.am  Makefile.in  klatt.c  klatt.man  parwave.c  parwave.h
klatt80/: Makefile  parwave.c  parwave.h
